--- a/test-app/pom.xml
+++ b/test-app/pom.xml
@@ -43,7 +43,7 @@
                     <libraries>
                         <library>
                             <type>executable</type>
-                            <run>true</run>
+                            <run>false</run>
                         </library>
                     </libraries>
                 </configuration>
