--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,17 @@
     </modules>
 
     <dependencies>
+      <!--
         <dependency>
             <groupId>net.sf.antcontrib</groupId>
             <artifactId>cpptasks-parallel</artifactId>
             <version>1.0-beta-5-parallel-1-SNAPSHOT</version>
+        </dependency>
+      -->
+        <dependency>
+            <groupId>com.github.maven-nar</groupId>
+            <artifactId>cpptasks-parallel</artifactId>
+            <version>1.3.0</version>
         </dependency>
     </dependencies>
 
