--- a/test-app/pom.xml
+++ b/test-app/pom.xml
@@ -22,10 +22,10 @@
   	
     <dependencies>
         <dependency>
-            <groupId>com.awakening.mvn-test</groupId>
-            <artifactId>test-library</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>nar</type>
+		    <groupId>com.awakening.mvn-test</groupId>
+		    <artifactId>test-library</artifactId>
+		    <type>nar</type>
+		    <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -33,9 +33,9 @@
         <defaultGoal>integration-test</defaultGoal>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-nar-plugin</artifactId>
-                <version>2.1-SNAPSHOT</version>
+				<groupId>com.github.maven-nar</groupId>
+				<artifactId>nar-maven-plugin</artifactId>
+				<version>3.0.0</version>
                 <extensions>true</extensions>
 
                 <configuration>
