--- a/test-library/pom.xml
+++ b/test-library/pom.xml
@@ -24,9 +24,9 @@
         <defaultGoal>install</defaultGoal>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-nar-plugin</artifactId>
-                <version>2.1-SNAPSHOT</version>
+			    <groupId>com.github.maven-nar</groupId>
+			    <artifactId>nar-maven-plugin</artifactId>
+			    <version>3.0.0</version>
                 <extensions>true</extensions>
                 <configuration>
                     <layout>NarLayout20</layout>
